# wizard-sdk

./: FolderStructure.md  README.md  gitignore  pyproject.toml  requirements.txt  setup.py  wizardai.py
.github/workflows/: publish.yml
examples/: full_demo.py
wizardai/: ai_client.py  vision.py
